--- a/css/src/attachment.less
+++ b/css/src/attachment.less
@@ -1,10 +1,13 @@
 .attachment {
   .entry-attachment {
+    margin-top: 15px;
     text-align: center;
   }
 
   .entry-attachment img {
     border: 1px solid #999;
+    height: auto;
+    max-width: 100%;
   }
 
   .entry-caption {
