--- a/css/src/comments.less
+++ b/css/src/comments.less
@@ -123,7 +123,7 @@
 }
 
 #addComment, .generalButton {
-  width: 150px;
+  width: 100%;
   padding: 5px;
   margin: 5px 0 4px 0;
   background: url(/blog/images/button-bg.gif) repeat-x;
