--- a/less/comments.less
+++ b/less/comments.less
@@ -133,7 +133,7 @@
   cursor: pointer;
 
   .spinner {
-    left: 290px;
+    left: 65%;
     font-size: 10px;
     height: 30px;
     position: absolute;
@@ -141,5 +141,13 @@
     text-align: center;
     top: 5px;
     width: 50px;
+  }
+}
+
+@media only screen and (min-width: 480px) {
+  .btn, .generalButton {
+    .spinner {
+      left: 60%;
+    }
   }
 }
