--- a/less/header.less
+++ b/less/header.less
@@ -1,63 +1,71 @@
-#header {
-  background: #111;
-  border-bottom: 1px solid #FFF2AD;
-  position: relative;
+.header-container {
+  background-color: #111;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
   text-align: center;
+  z-index: 5000;
 
   img {
-    width: 90%;
+    width: auto;
     max-width: 312px;
-    height: auto;
-    padding: 10px 0;
+    height: 60px;
+    padding: 10px;
   }
 }
 
-#nav { display: none; }
+nav { display: none; }
 
 @media only screen and (min-width: 768px) {
-  #header {
+  .header-container {
     height: 130px;
+    text-align: left;
+
+    header {
+      margin: 0 auto;
+      position: relative;
+      width: 876px;
+    }
+
+    h1 {
+      display: inline-block;
+    }
 
     img {
-      top: 15px;
-      left: 13px;
-      position: absolute;
+      height: auto;
       padding: 0;
-    }
-  }
-
-  #nav {
-    display: block;
-    list-style: none;
-    margin: 0 0 2px 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-
-    li {
-      float: left;
-      margin-left: 10px;
+      margin-left: 7px;
+      margin-top: 14px;
     }
 
-    a {
-      color: #fff;
-      border-bottom: 1px solid #fff;
+    nav {
       display: block;
-      font-weight: bold;
-      font-size: 28px;
-      letter-spacing: 1px;
-      margin: 0 10px 6px 10px;
-      padding: 0 0 2px 0;
-      text-align: center;
-      text-decoration: none;
-    }
+      position: absolute;
+      right: 0;
+      bottom: 0;
 
-    a:visited { color: #fff; }
+      a {
+        color: #fff;
+        border-bottom: 1px solid #fff;
+        display: inline-block;
+        font-weight: bold;
+        font-size: 28px;
+        letter-spacing: 1px;
+        margin: 0 0 6px 20px;
+        padding: 0 0 2px 0;
+        text-align: center;
+        text-decoration: none;
+      }
 
-    a:hover {
-      border-bottom: 2px solid #fff;
-      color: #FFF9D8;
-      margin-bottom: 5px;
+      a:visited { color: #fff; }
+
+      a:hover {
+        border-bottom: 2px solid #fff;
+        color: #FFF9D8;
+        margin-bottom: 5px;
+      }
     }
   }
 }
