--- a/less/styles.less
+++ b/less/styles.less
@@ -24,7 +24,7 @@ strong { font-weight: bold; }
 
 h1 { margin: 0; padding: 0; }
 
-h2, h3, #nav a, #content h4, #sidebar h3 {
+h2, h3, nav a, #content h4, #sidebar h3 {
   font-family: @heading-font;
 }
 
@@ -68,6 +68,7 @@ code {
 
 #page {
   margin: 0 auto;
+  padding-top: 80px;
   width: 100%;
   background: #FFF9D8;
 }
@@ -116,6 +117,7 @@ code {
     width: 876px;
     border: 5px solid #d5e6eb;
     border-top: none;
+    padding-top: 130px;
 
     .post-cat {
       background: url(/blog/images/mini-category.gif) no-repeat left center;
