--- a/less/styles.less
+++ b/less/styles.less
@@ -245,6 +245,7 @@ div.crayon-syntax {
   margin-left: -11px;
   padding-left: 5px;
   width: 514px;
+  z-index: 10000;
 }
 
 .crayon-nums { display: none; }
