--- a/less/content.less
+++ b/less/content.less
@@ -109,6 +109,7 @@
     text-align: center;
     font-style: italic;
     font-size: 12px;
+    line-height: 18px;
     margin: 0 5px 5px 5px;
     padding: 0;
   }
